--- a/.kde/share/apps/RecentDocuments/unnamed.desktop
+++ b/.kde/share/apps/RecentDocuments/unnamed.desktop
@@ -2,5 +2,5 @@
 Icon=text-html
 Name=
 Type=Link
-URL[$e]=https://vincentpasquier.net:3443/
-X-KDE-LastOpenedWith=firefox
+URL[$e]=http://www.camptocamp.org/
+X-KDE-LastOpenedWith=firefox_dev
