--- a/.gitmodules
+++ b/.gitmodules
@@ -50,3 +50,6 @@
 	path = .vim/bundle/vim-xterm-color-table
 	url = https://github.com/guns/xterm-color-table.vim.git
 	ignore = dirty
+[submodule ".vim/bundle/vim-hybrid-material"]
+	path = .vim/bundle/vim-hybrid-material
+	url = https://github.com/kristijanhusak/vim-hybrid-material.git
