--- a/.gitmodules
+++ b/.gitmodules
@@ -53,3 +53,6 @@
 [submodule ".vim/bundle/vim-hybrid-material"]
 	path = .vim/bundle/vim-hybrid-material
 	url = https://github.com/kristijanhusak/vim-hybrid-material.git
+[submodule ".vim/bundle/vim-gruvbox"]
+	path = .vim/bundle/vim-gruvbox
+	url = https://github.com/morhetz/gruvbox.git
