--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,6 @@
 [submodule ".vim/bundle/vim-gruvbox"]
 	path = .vim/bundle/vim-gruvbox
 	url = https://github.com/morhetz/gruvbox.git
+[submodule ".vim/bundle/vim-ego"]
+	path = .vim/bundle/vim-ego
+	url = https://github.com/geetarista/ego.vim.git
