--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "src/aur/profile-sync-daemon"]
 	path = src/aur/profile-sync-daemon
 	url = https://aur.archlinux.org/profile-sync-daemon.git
+[submodule "src/aur/python-graph-tool"]
+	path = src/aur/python-graph-tool
+	url = https://aur.archlinux.org/python-graph-tool.git
