--- a/.gitmodules
+++ b/.gitmodules
@@ -58,6 +58,6 @@
 [submodule ".oh-my-zsh"]
 	path = .oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh.git
-[submodule ".vim/bundle/vim-lldb"]
-	path = .vim/bundle/vim-lldb
-	url = https://github.com/gilligan/vim-lldb.git
+[submodule ".vim/bundle/nvim-lldb"]
+	path = .vim/bundle/nvim-lldb
+	url = https://github.com/critiqjo/lldb.nvim.git
