--- a/.local/share/data/ownCloud/owncloud.cfg
+++ b/.local/share/data/ownCloud/owncloud.cfg
@@ -23,4 +23,4 @@ version=2
 geometry=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x8b\0\0\0\x5\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\0\x86\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x89\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
 
 [Settings]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x2\\\0\0\0\xb2\0\0\x5\x10\0\0\x3i\0\0\x2\\\0\0\0\xcc\0\0\x5\x10\0\0\x3i\0\0\0\0\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x3\xc0\0\0\0\x1b\0\0\a\x7f\0\0\x2\xd4\0\0\x3\xc0\0\0\0\x37\0\0\a\x7f\0\0\x2\xd4\0\0\0\0\0\0\0\0\a\x80)
