--- a/.config/deluge/core.conf
+++ b/.config/deluge/core.conf
@@ -93,7 +93,7 @@
       "port": 8080
     }
   }, 
-  "add_paused": true, 
+  "add_paused": false, 
   "max_connections_per_torrent": -1, 
   "remove_seed_at_ratio": false, 
   "autoadd_location": "/home/helvethor/downloads", 
