--- a/.config/deluge/core.conf
+++ b/.config/deluge/core.conf
@@ -6,7 +6,7 @@
   "lsd": true, 
   "send_info": false, 
   "move_completed_path": "/home/helvethor/data/deluge", 
-  "enc_in_policy": 1, 
+  "enc_in_policy": 2, 
   "queue_new_to_top": false, 
   "ignore_limits_on_local_network": true, 
   "rate_limit_ip_overhead": true, 
@@ -18,7 +18,7 @@
   "max_active_seeding": 5, 
   "allow_remote": false, 
   "max_half_open_connections": 50, 
-  "download_location": "/media/helvethor/data/deluge", 
+  "download_location": "/home/helvethor/downloads/deluge", 
   "compact_allocation": false, 
   "max_upload_speed": -1.0, 
   "cache_expiry": 60, 
@@ -62,7 +62,7 @@
   "max_upload_speed_per_torrent": -1, 
   "copy_torrent_file": false, 
   "del_copy_torrent_file": false, 
-  "move_completed": true, 
+  "move_completed": false, 
   "proxies": {
     "peer": {
       "username": "", 
