--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "src/project/python/bomber"]
 	path = src/project/python/bomber
 	url = https://github.com/Helvethor/bomber
+[submodule "src/project/python/stack-game"]
+	path = src/project/python/stack-game
+	url = https://github.com/Helvethor/stack-game
