update without enter

--- a/.config/dconf/user.d/extensions.conf
+++ b/.config/dconf/user.d/extensions.conf
@@ -1,6 +1,6 @@
 [org/gnome/shell/extensions/arch-update]
 notify=true
-update-cmd="gnome-terminal -e 'sh -c  \"sudo pacman -Syu ; echo Done - Press enter to exit; read\" '"
+update-cmd="gnome-terminal -e 'sh -c  \"sudo pacman -Syu\" '"
 
 [org/gnome/shell/extensions/openweather]
 weather-provider='openweathermap'
