--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "src/heia/prog/lecture"]
 	path = src/heia/prog/lecture
 	url = git@gitlab.forge.hefr.ch:sup-prog-2016-2017/lecture
+[submodule "src"]
+	path = src
+	url = ./src
