--- a/.ssh/config
+++ b/.ssh/config
@@ -5,3 +5,8 @@ Host aur.archlinux.org
 Host github.com
 	IdentityFile ~/.ssh/id_rsa
 	User helvethor
+
+Host sv1 sv1.lan
+	HostName sv1.lan
+	IdentityFile ~/.ssh/id_rsa_pass
+	User helvethor
