remove clipboard plugin shortcut

--- a/.config/dconf/user.d/desktops.conf
+++ b/.config/dconf/user.d/desktops.conf
@@ -35,4 +35,5 @@ gtk-im-module='gtk-im-context-simple'
 clock-show-seconds=true
 enable-animations=true
 
-
+[org/gnome/shell/extensions/clipboard-indicator]
+enable-keybindings=false
