--- a/.gitmodules
+++ b/.gitmodules
@@ -58,9 +58,6 @@
 [submodule ".oh-my-zsh"]
 	path = .oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh.git
-[submodule ".vim/bundle/nvim-lldb"]
-	path = .vim/bundle/nvim-lldb
-	url = https://github.com/critiqjo/lldb.nvim.git
 [submodule "src/project/python/bomber"]
 	path = src/project/python/bomber
 	url = https://github.com/Helvethor/bomber
@@ -73,3 +70,6 @@
 [submodule "src"]
 	path = src
 	url = https://github.com/helvethor/src
+[submodule ".vim/bundle/vim-eclim"]
+	path = .vim/bundle/vim-eclim
+	url = https://github.com/dansomething/vim-eclim
