--- a/.local/share/data/ownCloud/owncloud.cfg
+++ b/.local/share/data/ownCloud/owncloud.cfg
@@ -6,7 +6,7 @@ optionalDesktopNotifications=true
 useNewBigFolderSizeLimit=true
 
 [Accounts]
-0\Folders\1\ignoreHiddenFiles=true
+0\Folders\1\ignoreHiddenFiles=false
 0\Folders\1\localPath=/home/helvethor/owncloud/
 0\Folders\1\paused=false
 0\Folders\1\targetPath=/
@@ -21,7 +21,7 @@ useNewBigFolderSizeLimit=true
 version=2
 
 [ActivityListHeader]
-geometry=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x3\x96\0\0\0\x5\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\0\x86\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1\x94\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
+geometry=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x3\x88\0\0\0\x5\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\0\x86\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1\x86\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
 
 [Settings]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x3\xc0\0\0\0\x1b\0\0\a\x7f\0\0\x2\xd4\0\0\x3\xc0\0\0\0\x37\0\0\a\x7f\0\0\x2\xd4\0\0\0\0\0\0\0\0\a\x80)
