--- a/.config/dconf/user.d/org-gnome-terminal.conf
+++ b/.config/dconf/user.d/org-gnome-terminal.conf
@@ -1,4 +1,4 @@
-[org/gnome/terminal/legacy/profiles:/:368e4491-d7c1-49a0-9c74-fe5a11722aef]
+[legacy/profiles:/:368e4491-d7c1-49a0-9c74-fe5a11722aef]
 foreground-color='rgb(197,200,198)'
 visible-name='Hybrid Reduced Contrast'
 palette=['rgb(46,52,54)', 'rgb(165,66,66)', 'rgb(140,148,64)', 'rgb(222,147,95)', 'rgb(95,129,157)', 'rgb(133,103,143)', 'rgb(94,141,135)', 'rgb(108,122,128)', 'rgb(66,80,89)', 'rgb(204,102,102)', 'rgb(181,189,104)', 'rgb(240,198,116)', 'rgb(129,162,190)', 'rgb(178,148,187)', 'rgb(138,190,183)', 'rgb(197,200,198)']
@@ -9,12 +9,24 @@ background-color='rgb(35,40,50)'
 audible-bell=false
 scrollbar-policy='never'
 
-[org/gnome/terminal/legacy/profiles:/:b1dcc9dd-5262-4d8d-a863-c897e6d979b9]
+[legacy/profiles:/:46a3eba8-5212-4a50-abbf-a17cd93a88cc]
+foreground-color='rgb(197,200,198)'
+visible-name='Test'
+palette=['rgb(46,52,54)', 'rgb(165,66,66)', 'rgb(140,148,64)', 'rgb(222,147,95)', 'rgb(95,129,157)', 'rgb(133,103,143)', 'rgb(94,141,135)', 'rgb(108,122,128)', 'rgb(66,80,89)', 'rgb(204,102,102)', 'rgb(181,189,104)', 'rgb(240,198,116)', 'rgb(129,162,190)', 'rgb(178,148,187)', 'rgb(138,190,183)', 'rgb(197,200,198)']
+scroll-on-output=true
+use-theme-colors=false
+bold-color-same-as-fg=true
+background-color='rgb(47,52,63)'
+audible-bell=false
+scrollbar-policy='never'
+
+[legacy/profiles:/:b1dcc9dd-5262-4d8d-a863-c897e6d979b9]
 use-theme-colors=true
 palette=['rgb(7,54,66)', 'rgb(220,50,47)', 'rgb(133,153,0)', 'rgb(181,137,0)', 'rgb(38,139,210)', 'rgb(211,54,130)', 'rgb(42,161,152)', 'rgb(238,232,213)', 'rgb(0,43,54)', 'rgb(203,75,22)', 'rgb(88,110,117)', 'rgb(101,123,131)', 'rgb(131,148,150)', 'rgb(108,113,196)', 'rgb(147,161,161)', 'rgb(253,246,227)']
 
-[org/gnome/terminal/legacy/profiles:]
+[legacy/profiles:]
 list=['b1dcc9dd-5262-4d8d-a863-c897e6d979b9', '368e4491-d7c1-49a0-9c74-fe5a11722aef']
 default='368e4491-d7c1-49a0-9c74-fe5a11722aef'
 
-
+[legacy]
+schema-version=uint32 3
