--- a/.config/dconf/user.d/org-gnome-evolution.conf
+++ b/.config/dconf/user.d/org-gnome-evolution.conf
@@ -11,12 +11,13 @@ junk-empty-on-exit-days=0
 paned-size=356
 trash-empty-on-exit-days=0
 junk-check-incoming=true
-junk-lookup-addressbook=false
+composer-show-from-override=false
 browser-close-on-reply-policy='ask'
+junk-lookup-addressbook=false
 headers=['<?xml version="1.0"?>\n<header name="From" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Reply-To" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="To" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Cc" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Bcc" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Subject" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Date" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Newsgroups" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Face" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="x-evolution-mailer"/>\n']
 reply-style-name='quoted'
-junk-check-custom-header=true
 global-view-setting=true
+junk-check-custom-header=true
 forward-style-name='attached'
 image-loading-policy='never'
 search-gravatar-for-photo=false
@@ -26,6 +27,11 @@ show-headers=[('From', true), ('Reply-To', true), ('To', true), ('Cc', true), ('
 width=352
 maximized=false
 height=406
+
+[mail/composer-window]
+width=960
+maximized=false
+height=1052
 
 [mail/subscription-window]
 width=600
@@ -37,10 +43,13 @@ default-calendar='system-calendar'
 version='3.22.2'
 
 [addressbook]
+primary-addressbook='system-address-book'
+completion-show-address=false
 vpane-position=400
+completion-minimum-query-length=3
 
 [calendar]
-tag-vpane-position=0.0010989010989010989
+tag-vpane-position=0.0011600928074245939
 confirm-purge=true
 hpane-position=183
 day-end-hour=18
@@ -49,7 +58,7 @@ task-vpane-position=400
 work-day-friday=true
 day-start-hour=7
 recur-events-italic=false
-last-notification-time=1476690900
+last-notification-time=1476770100
 prefer-new-item=''
 memo-vpane-position=400
 day-start-minute=0
