--- a/.config/evolution/mail/state.ini
+++ b/.config/evolution/mail/state.ini
@@ -12,7 +12,7 @@ SearchScope=mail-scope-current-folder
 SearchOption=mail-search-subject-or-addresses-contain
 
 [Folder Tree]
-Selected=folder://1476721404.9280.2%40fenrir/INBOX
+Selected=folder://1476722494.9280.30%40fenrir/INBOX
 
 [Folder folder://1476455613.889.9%40fenrir/INBOX]
 GroupByThreads=true
@@ -31,9 +31,9 @@ PreviewVisible=true
 
 [Folder folder://1476721404.9280.2%40fenrir/INBOX]
 PreviewVisible=true
-SelectedMessage=1279
 SearchOption=mail-search-subject-or-addresses-contain
 GroupByThreads=true
+SelectedMessage=1279
 
 [Folder folder://1476721404.9280.2%40fenrir/Arch]
 PreviewVisible=true
@@ -63,7 +63,7 @@ PreviewVisible=true
 
 [Folder folder://1476722494.9280.30%40fenrir/Externe]
 PreviewVisible=true
-SelectedMessage=348
+SelectedMessage=354
 
 [Folder folder://1476722494.9280.30%40fenrir/.%23evolution/Junk]
 PreviewVisible=true
@@ -83,6 +83,7 @@ SelectedMessage=nWI9T3_W856
 [Folder folder://1476722494.9280.30%40fenrir/INBOX]
 PreviewVisible=true
 SelectedMessage=839
+GroupByThreads=true
 
 [Folder folder://1476722494.9280.30%40fenrir/Bo%c3%aete%20d'envoi]
 PreviewVisible=true
@@ -103,7 +104,7 @@ SelectedMessage=28
 
 [Folder folder://1476721404.9280.2%40fenrir/Gmail]
 PreviewVisible=true
-SelectedMessage=644
+SelectedMessage=649
 
 [Folder folder://1476721404.9280.2%40fenrir/Gandi]
 PreviewVisible=true
@@ -123,7 +124,7 @@ SelectedMessage=14
 
 [Folder folder://1476721404.9280.2%40fenrir/CFF]
 PreviewVisible=true
-SelectedMessage=160
+SelectedMessage=161
 
 [Folder folder://1476721404.9280.2%40fenrir/Archives]
 PreviewVisible=true
@@ -147,7 +148,7 @@ SelectedMessage=71
 
 [Folder folder://1476721404.9280.2%40fenrir/Sent]
 PreviewVisible=true
-SelectedMessage=1
+SelectedMessage=141
 
 [Folder folder://1476721404.9280.2%40fenrir/Trash]
 PreviewVisible=true
@@ -157,3 +158,15 @@ SelectedMessage=67
 GroupByThreads=true
 PreviewVisible=true
 SelectedMessage=17
+
+[Folder folder://1476722494.9280.30%40fenrir/Officiel]
+PreviewVisible=true
+SelectedMessage=244
+
+[Folder folder://1476721404.9280.2%40fenrir/Linux]
+PreviewVisible=true
+SelectedMessage=26
+
+[Folder folder://1476721404.9280.2%40fenrir/Lutopik]
+PreviewVisible=true
+SelectedMessage=1
