--- a/.config/dconf/user.d/org-gnome-desktop.conf
+++ b/.config/dconf/user.d/org-gnome-desktop.conf
@@ -35,10 +35,10 @@ application-id='org.gnome.clocks.desktop'
 application-id='thunderbird.desktop'
 
 [screensaver]
-picture-uri='file:///home/helvethor/pictures/wallpaper/misc/arch.png'
+picture-uri='file:///home/helvethor/pictures/wallpaper/homemade/dragon-curve-2.png'
 color-shading-type='solid'
 primary-color='#000000000000'
-picture-options='centered'
+picture-options='zoom'
 secondary-color='#000000000000'
 
 [session]
@@ -54,11 +54,11 @@ resize-with-right-button=false
 action-middle-click-titlebar='toggle-shade'
 
 [background]
-picture-uri='file:///home/helvethor/owncloud/pictures/wallpaper/misc/arch.png'
+picture-uri='file:///home/helvethor/pictures/wallpaper/homemade/dragon-curve-2.png'
 show-desktop-icons=false
 color-shading-type='solid'
 primary-color='#000000000000'
-picture-options='centered'
+picture-options='zoom'
 secondary-color='#000000000000'
 
 [input-sources]
