evolution auto-load content

--- a/.config/dconf/user.d/org-gnome-evolution.conf
+++ b/.config/dconf/user.d/org-gnome-evolution.conf
@@ -14,12 +14,13 @@ junk-check-incoming=true
 composer-show-from-override=false
 browser-close-on-reply-policy='ask'
 junk-lookup-addressbook=false
+load-http-images=2
 headers=['<?xml version="1.0"?>\n<header name="From" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Reply-To" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="To" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Cc" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Bcc" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Subject" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Date" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Newsgroups" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="Face" enabled=""/>\n', '<?xml version="1.0"?>\n<header name="x-evolution-mailer"/>\n']
 reply-style-name='quoted'
 global-view-setting=true
 junk-check-custom-header=true
 forward-style-name='attached'
-image-loading-policy='never'
+image-loading-policy='always'
 search-gravatar-for-photo=false
 show-headers=[('From', true), ('Reply-To', true), ('To', true), ('Cc', true), ('Bcc', true), ('Subject', true), ('Date', true), ('Newsgroups', true), ('Face', true), ('x-evolution-mailer', false)]
 
