--- a/.ssh/config
+++ b/.ssh/config
@@ -6,7 +6,12 @@ Host github.com
 	IdentityFile ~/.ssh/id_rsa
 	User helvethor
 
-Host sv1 sv1.lan
+Host sv1.lan
 	HostName sv1.lan
 	IdentityFile ~/.ssh/id_rsa_pass
+	User helvethor
+
+Host git.lan
+	HostName git.lan
+	IdentityFile ~/.ssh/id_rsa_gitlab
 	User helvethor
