--- a/.config/dconf/user.d/org-gnome-evolution.conf
+++ b/.config/dconf/user.d/org-gnome-evolution.conf
@@ -34,6 +34,11 @@ width=960
 maximized=false
 height=1052
 
+[mail/send-recv-window]
+width=600
+maximized=false
+height=200
+
 [mail/subscription-window]
 width=600
 maximized=false
@@ -59,7 +64,7 @@ task-vpane-position=400
 work-day-friday=true
 day-start-hour=7
 recur-events-italic=false
-last-notification-time=1476770100
+last-notification-time=1476950100
 prefer-new-item=''
 memo-vpane-position=400
 day-start-minute=0
