--- a/.config/dconf/user.d/org-gnome-shell.conf
+++ b/.config/dconf/user.d/org-gnome-shell.conf
@@ -2,7 +2,7 @@
 app-picker-view=uint32 1
 command-history=['gconf-editor']
 enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'alternate-tab@gnome-shell-extensions.gcampax.github.com', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'openweather-extension@jenslody.de', 'clipboard-indicator@tudmotu.com', 'shell-volume-mixer@derhofbauer.at', 'fq@megh', 'services-systemd@abteil.org', 'arch-update@RaphaelRochet', 'window-list-mod@vagonpop.gmail.com', 'shellshape@gfxmonk.net']
-favorite-apps=['firefox.desktop', 'thunderbird.desktop', 'org.gnome.Nautilus.desktop', 'libreoffice-startcenter.desktop']
+favorite-apps=['firefox.desktop', 'org.gnome.Nautilus.desktop', 'libreoffice-startcenter.desktop', 'evolution.desktop', 'org.gnome.Calendar.desktop']
 
 [calendar]
 show-weekdate=false
