--- a/.local/share/data/ownCloud/owncloud.cfg
+++ b/.local/share/data/ownCloud/owncloud.cfg
@@ -23,4 +23,4 @@ version=2
 geometry=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x3\x96\0\0\0\x5\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\0\x86\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1\x94\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
 
 [Settings]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0.\0\0\0\x8b\0\0\x3\xed\0\0\x3\x44\0\0\0.\0\0\0\xa7\0\0\x3\xed\0\0\x3\x44\0\0\0\0\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\xba\0\0\x1\x37\0\0\x4y\0\0\x3\xf0\0\0\0\xba\0\0\x1S\0\0\x4y\0\0\x3\xf0\0\0\0\0\0\0\0\0\a\x80)
