--- a/.config/deluge/gtkui.conf
+++ b/.config/deluge/gtkui.conf
@@ -19,7 +19,7 @@
   "ntf_popup": false, 
   "ntf_pass": "", 
   "show_sidebar": true, 
-  "window_maximized": true, 
+  "window_maximized": false, 
   "enable_system_tray": true, 
   "tray_download_speed_list": [
     5.0, 
@@ -43,15 +43,15 @@
   "pref_dialog_width": 500, 
   "autoconnect_host_id": null, 
   "classic_mode": true, 
-  "window_pane_position": 717, 
+  "window_pane_position": 726, 
   "focus_main_window_on_add": true, 
   "show_rate_in_title": false, 
   "autoadd_enable": false, 
   "ntf_username": "", 
   "interactive_add": true, 
   "sidebar_show_zero": false, 
-  "window_x_pos": 1859, 
-  "window_height": 1025, 
+  "window_x_pos": 2880, 
+  "window_height": 1052, 
   "ntf_security": null, 
   "connection_limit_list": [
     50, 
