--- a/.local/share/data/ownCloud/owncloud.cfg
+++ b/.local/share/data/ownCloud/owncloud.cfg
@@ -14,13 +14,13 @@ useNewBigFolderSizeLimit=true
 0\http_certificatePasswd=
 0\http_certificatePath=
 0\http_user=helvethor
-0\serverVersion=
+0\serverVersion=9.1.0.15
 0\url=https://owncloud.shabang.ch
 0\user=helvethor
 version=2
 
 [ActivityListHeader]
-geometry=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x3\x96\0\0\0\x5\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\0\x86\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1\x94\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
+geometry=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x3\x88\0\0\0\x5\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\0\x86\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1\x86\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
 
 [Settings]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\xba\0\0\x1\x37\0\0\x4y\0\0\x3\xf0\0\0\0\xba\0\0\x1S\0\0\x4y\0\0\x3\xf0\0\0\0\0\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\xb3\0\0\0\xb0\0\0\x4r\0\0\x3i\0\0\0\xb3\0\0\0\xcc\0\0\x4r\0\0\x3i\0\0\0\0\0\0\0\0\a\x80)
