--- a/.config/evolution/mail/sortorder.ini
+++ b/.config/evolution/mail/sortorder.ini
@@ -1,2 +1,2 @@
 [Accounts]
-SortOrder=1476721404.9280.2@fenrir;1476722494.9280.30@fenrir;local;vfolder;
+SortOrder=1476721404.9280.2@fenrir;1476722494.9280.30@fenrir;1482248458.3954.2@fenrir;local;vfolder;
