new dconf files

--- a/.config/dconf/user.d/org.gnome.desktop.conf
+++ b/.config/dconf/user.d/org.gnome.desktop.conf
@@ -10,14 +10,23 @@ toolkit-accessibility=false
 [notifications]
 application-children=['gnome-tweak-tool', 'org-gnome-nautilus', 'org-gnome-clocks', 'firefox', 'thunderbird', 'owncloud', 'evolution']
 
+[notifications/application/ghb]
+application-id='ghb.desktop'
+
 [notifications/application/org-gnome-nautilus]
 application-id='org.gnome.Nautilus.desktop'
 
 [notifications/application/firefox]
 application-id='firefox.desktop'
 
+[notifications/application/android-studio]
+application-id='android-studio.desktop'
+
 [notifications/application/filezilla]
 application-id='filezilla.desktop'
+
+[notifications/application/gnome-mplayer]
+application-id='gnome-mplayer.desktop'
 
 [notifications/application/owncloud]
 application-id='owncloud.desktop'
@@ -25,11 +34,11 @@ application-id='owncloud.desktop'
 [notifications/application/gnome-tweak-tool]
 application-id='gnome-tweak-tool.desktop'
 
-[notifications/application/evolution]
-application-id='evolution.desktop'
-
 [notifications/application/org-gnome-clocks]
 application-id='org.gnome.clocks.desktop'
+
+[notifications/application/evolution]
+application-id='evolution.desktop'
 
 [notifications/application/thunderbird]
 application-id='thunderbird.desktop'
