--- a/.config/dconf/user.d/org.gnome.desktop.conf
+++ b/.config/dconf/user.d/org.gnome.desktop.conf
@@ -1,14 +1,16 @@
 [interface]
-clock-show-date=true
 gtk-key-theme='Default'
+font-name='Helvetica Medium 11'
 gtk-im-module='gtk-im-context-simple'
+toolkit-accessibility=false
 clock-show-seconds=true
+monospace-font-name='Fira Mono 11'
 enable-animations=true
 gtk-theme='Arc-Darker'
-toolkit-accessibility=false
+clock-show-date=true
 
 [notifications]
-application-children=['gnome-tweak-tool', 'org-gnome-nautilus', 'org-gnome-clocks', 'firefox', 'thunderbird', 'owncloud', 'evolution']
+application-children=['gnome-tweak-tool', 'org-gnome-nautilus', 'org-gnome-clocks', 'firefox', 'thunderbird', 'owncloud', 'evolution', 'ca-desrt-dconf-editor', 'filezilla']
 
 [notifications/application/ghb]
 application-id='ghb.desktop'
@@ -31,14 +33,17 @@ application-id='gnome-mplayer.desktop'
 [notifications/application/owncloud]
 application-id='owncloud.desktop'
 
+[notifications/application/ca-desrt-dconf-editor]
+application-id='ca.desrt.dconf-editor.desktop'
+
 [notifications/application/gnome-tweak-tool]
 application-id='gnome-tweak-tool.desktop'
 
-[notifications/application/org-gnome-clocks]
-application-id='org.gnome.clocks.desktop'
-
 [notifications/application/evolution]
 application-id='evolution.desktop'
+
+[notifications/application/org-gnome-clocks]
+application-id='org.gnome.clocks.desktop'
 
 [notifications/application/thunderbird]
 application-id='thunderbird.desktop'
@@ -61,6 +66,7 @@ auto-raise=false
 button-layout='appmenu:minimize,maximize,close'
 resize-with-right-button=false
 action-middle-click-titlebar='toggle-shade'
+titlebar-font='Helvetica Medium 11'
 
 [background]
 picture-uri='file:///home/helvethor/pictures/wallpaper/homemade/dragon-curve-2.png'
