--- a/.local/share/data/ownCloud/owncloud.cfg
+++ b/.local/share/data/ownCloud/owncloud.cfg
@@ -7,12 +7,11 @@ useNewBigFolderSizeLimit=true
 
 [Accounts]
 0\Folders\1\ignoreHiddenFiles=true
+0\Folders\1\journalPath=._sync_165d54a5b782.db
 0\Folders\1\localPath=/home/helvethor/owncloud/
 0\Folders\1\paused=false
 0\Folders\1\targetPath=/
 0\authType=http
-0\http_certificatePasswd=
-0\http_certificatePath=
 0\http_user=helvethor
 0\serverVersion=9.1.0.15
 0\url=https://owncloud.shabang.ch
@@ -20,7 +19,7 @@ useNewBigFolderSizeLimit=true
 version=2
 
 [ActivityListHeader]
-geometry=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x3\x96\0\0\0\x5\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\0\x86\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1\x94\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
+geometry=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x3v\0\0\0\x5\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x5\0\0\0\x86\0\0\0\x1\0\0\0\0\0\0\0\xb4\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1t\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
 
 [Settings]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x3+\0\0\0\x9f\0\0\x6\xea\0\0\x3X\0\0\x3+\0\0\0\xbb\0\0\x6\xea\0\0\x3X\0\0\0\0\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x3\xc7\0\0\0$\0\0\ah\0\0\x2i\0\0\x3\xc8\0\0\0%\0\0\ag\0\0\x2h\0\0\0\0\0\0\0\0\a\x80)
