--- a/.config/deluge/gtkui.conf
+++ b/.config/deluge/gtkui.conf
@@ -4,9 +4,9 @@
 }{
   "close_to_tray": false, 
   "ntf_sound_path": "/home/helvethor/downloads", 
-  "window_width": 1918, 
+  "window_width": 738, 
   "default_load_path": null, 
-  "window_y_pos": 27, 
+  "window_y_pos": 39, 
   "ntf_email": false, 
   "tray_upload_speed_list": [
     5.0, 
@@ -19,7 +19,7 @@
   "ntf_popup": false, 
   "ntf_pass": "", 
   "show_sidebar": true, 
-  "window_maximized": true, 
+  "window_maximized": false, 
   "enable_system_tray": true, 
   "tray_download_speed_list": [
     5.0, 
@@ -43,15 +43,15 @@
   "pref_dialog_width": 500, 
   "autoconnect_host_id": null, 
   "classic_mode": true, 
-  "window_pane_position": 699, 
+  "window_pane_position": 182, 
   "focus_main_window_on_add": true, 
   "show_rate_in_title": false, 
   "autoadd_enable": false, 
   "ntf_username": "", 
   "interactive_add": true, 
   "sidebar_show_zero": false, 
-  "window_x_pos": 0, 
-  "window_height": 1025, 
+  "window_x_pos": 20, 
+  "window_height": 512, 
   "ntf_security": null, 
   "connection_limit_list": [
     50, 
